# KursovayaDjango

./: groups_permissions.json  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/templates/blog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html  post_detail.html
config/: settings.py  urls.py
newsletter/: admin.py  apps.py  forms.py  models.py  scheduler.py  signals.py  tasks.py  urls.py  views.py
newsletter/management/commands/: send_newsletters.py
newsletter/templates/: base.html
newsletter/templates/newsletter/: client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  report_detail.html  report_list.html  user_confirm_delete.html  user_form.html
newsletter/templates/registration/: login.html
users/: forms.py  models.py  urls.py  views.py
users/templates/users/: email_confirm_failed.html  email_confirm_success.html  email_confirmation.html  login.html  profile.html  register.html  reset_password.html  users_list.html  verification_sent.html
