[tool.poetry]
name = "kursovayadjango"
version = "0.1.0"
description = ""
authors = ["mixei1902"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
python-dotenv = "^1.0.1"
django-apscheduler = "^0.6.2"
django-celery-beat = "^2.6.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
